# kiss_ai

./: .coverage.redundancy  .coveragerc.redundancy  .gitattributes  .gitignore  API.md  BLOG.md  COMMON_TASKS_FOR_SORCAR_DEVELOPMENT.md  Dockerfile  LESSONS.md  PLAN.md  README.md  SORCAR.md  SYSTEM.md  USER_PREF.md  USER_PREFS.md  check_output.txt  coverage.xml  docker-startup.sh  example_prompt.md  install.sh  kiss-sorcar.vsix  langchain_api.py  langchain_api_summary.md  pyproject.toml  pyrightconfig.json  redundancy.md  sorcar  sorcar-docker  sorcar.db-shm  sorcar.db-wal  test_file.txt  test_output.txt
.github/workflows/: windows-test.yml  windows-ui.yml
WORK_DIR/: USER_PREF.md
papers/: kiss_sorcar.aux  kiss_sorcar.out  kiss_sorcar.tex
papers/kisssorcar/: KISS_Sorcar_Lecture.pptx  kiss_sorcar.bib  kiss_sorcar.tex  ks_assistant.bib  ks_assistant.tex
papers/writingpaper/: writing_paper.bib  writing_paper.tex
scripts/: build-extension.sh  build_offline_pkg.sh  build_pkg.sh  docker-startup.sh  install.sh  release.sh  release_exp.sh  release_ext.sh  test_fresh_lib_install.sh  test_fresh_repo_install.sh
sorcar_reported_frauds/: prompt.md
src/kiss/: API.md  README.md  SORCAR.md  SYSTEM.md  _version.py  env.py
src/kiss/agents/: __init__.py
src/kiss/agents/assistant/: assistant.py  assistant_agent.py  browser_ui.py  chatbot_ui.py  code_server.py  config.py  relentless_agent.py  task_history.py  useful_tools.py
src/kiss/agents/autoresearch/: README.md  __init__.py  autoresearch_agent.py  config.py
src/kiss/agents/claw/: background_agent.py
src/kiss/agents/coding_agents/: agent_optimizer.py  config.py  relentless_coding_agent.py  repo_agent.py  repo_optimizer.py
src/kiss/agents/create_and_optimize_agent/: README.md  __init__.py  agent_evolver.py  improver_agent.py
src/kiss/agents/gepa/: README.md  gepa.py
src/kiss/agents/kiss_evolve/: README.md  __init__.py  kiss_evolve.py  simple_rag.py
src/kiss/agents/self_evolving_multi_agent/: README.md  multi_agent.py
src/kiss/agents/sorcar/: SORCAR.md  __init__.py  assistant_agent.py  browser_ui.py  chat_sorcar_agent.py  chatbot_ui.py  cli_helpers.py  code_server.py  config.py  git_worktree.py  persistence.py  prompt_detector.py  shared_utils.py  sorcar.py  sorcar_agent.py  stateful_sorcar_agent.py  task_history.py  useful_tools.py  web_use_tool.py  worktree_sorcar_agent.py
src/kiss/agents/third_party_agents/: _backend_utils.py  _channel_agent_utils.py  bluebubbles_agent.py  cron_manager_daemon.py  discord_agent.py  feishu_agent.py  gmail_agent.py  googlechat_agent.py  imessage_agent.py  irc_agent.py  line_agent.py  matrix_agent.py  mattermost_agent.py  msteams_agent.py  nextcloud_talk_agent.py  nostr_agent.py  phone_control_agent.py  signal_agent.py  slack_agent.py  sms_agent.py  synology_chat_agent.py  telegram_agent.py  tlon_agent.py  twitch_agent.py  whatsapp_agent.py  zalo_agent.py
src/kiss/agents/vscode/: .vscodeignore  REDUNDANCY_PLAN.md  SAMPLE_TASKS.json  __init__.py  autocomplete.py  browser_ui.py  commands.py  copy-kiss.sh  diff_merge.py  helpers.py  install.sh  kiss-sorcar-0.1.0.vsix  kiss-sorcar-0.2.56.vsix  kiss-sorcar-0.2.57.vsix  kiss-sorcar-0.2.62.vsix  kiss-sorcar-0.2.63.vsix  kiss-sorcar-buggy.vsix  kiss-sorcar.vsix  merge_flow.py  package-lock.json  package.json  server.py  task_runner.py  tsconfig.json  vscode_config.py  web_server.py
src/kiss/benchmarks/: __init__.py  generate_dashboard.py
src/kiss/benchmarks/swebench_pro/: README.md  __init__.py  adapter.py  eval.py  run.py
src/kiss/benchmarks/terminal_bench/: README.md  __init__.py  agent.py  run.py  tbench.md  test_agent.py
src/kiss/benchmarks/webarena/: README.md  __init__.py  agent.py  run.py  webarena_prompt.py
src/kiss/channels/: _channel_agent_utils.py  background_agent.py  bluebubbles_agent.py  discord_agent.py  feishu_agent.py  gmail_agent.py  googlechat_agent.py  imessage_agent.py  irc_agent.py  line_agent.py  matrix_agent.py  mattermost_agent.py  msteams_agent.py  nextcloud_talk_agent.py  nostr_agent.py  phone_control_agent.py  signal_agent.py  slack_agent.py  sms_agent.py  synology_chat_agent.py  telegram_agent.py  tlon_agent.py  twitch_agent.py  whatsapp_agent.py  zalo_agent.py
src/kiss/core/: POST.md  RELENTLESS_AGENT.md  SYSTEM.md  __init__.py  base.py  browser_ui.py  config.py  config_builder.py  kiss_agent.py  kiss_error.py  print_to_console.py  printer.py  relentless_agent.py  useful_tools.py
src/kiss/core/models/: __init__.py  anthropic_model.py  (+8 more)
src/kiss/docker/: __init__.py  docker_manager.py  docker_tools.py
src/kiss/scripts/: check.py  generate_api_docs.py  notebook.py  redundancy_analyzer.py  test_agent.py  update_models.py
src/kiss/tests/: _sorcar_test_server.py  conftest.py  integration_test_assistant_agent.py  test_a_model.py  test_ask_user_browser_action.py  test_ask_user_browser_multistep.py  test_ask_user_question.py  test_assistant_multi_session.py  test_assistant_redundancies.py  test_autoresearch.py  test_background_agent.py  test_bash_stream_flush.py  test_branch_coverage_integration.py  test_browser_close_shutdown.py  test_bugfix_validation.py  test_bugs_reproduction.py  test_chat_history_events.py  test_chatbot_tasks.py  test_chatbot_ui.py  test_chatbot_ui_spinner.py  test_clear_btn_welcome.py  test_cli_options.py  test_code_review_fixes.py  test_code_server_keybinding.py  test_code_server_watchdog.py  test_commit_push.py  test_core_branch_coverage.py  test_coverage_integration.py  test_cs_data_dir_isolation.py  test_current_editor_file.py  test_disable_copilot_scm.py  test_docker_manager.py  test_env.py  test_error_handling.py  test_evolver_progress_callback.py  test_file_usage.py  test_gemini_model_internals.py  test_generate_api_docs.py  test_gepa_batched.py  test_gepa_progress_callback.py  (+64 more)
src/kiss/viz_trajectory/: server.py
test_dir/: test_file.txt
tests/: test_assistant_redundancies.py  test_chatbot_ui.py  test_chatbot_ui_spinner.py  test_code_server_keybinding.py  test_commit_push.py  test_vscode_config.py
unformatted_mds/: file1.md  file2.md  test1.md  test2.md  test3.md
(+189 files in other folders)
