[project]
name = "kiss-agent-framework"
dynamic = ["version"]
description = "KISS Agent Framework - A simple and portable agent framework for building and evolving AI agents"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Koushik Sen", email = "ksen@berkeley.edu"},
]
license = {text = "Apache-2.0"}
keywords = [
    "llm",
    "agent",
    "ai",
    "framework",
    "react",
    "function-calling",
    "openai",
    "anthropic",
    "gemini",
    "together",
    "docker",
    "evolution",
    "genetic-algorithm",
    "swe-bench",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=2.13.0",
    "anthropic>=0.40.0",
    "rich>=14.2.0",
    "docker>=7.0.0",
    "google-genai>=0.30.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "flask>=3.0.0",
    "playwright>=1.40.0",
    "slack_sdk>=3.30.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "filelock>=3.25.2",
    "requests>=2.28.0",
    "harbor>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/kiss/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kiss"]
# JSON files in package directories are included automatically by hatchling

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "mdformat>=1.0.0",
    "nbconvert>=7.17.0",
    "requests>=2.28.0",
    "types-requests>=2.32.4.20260107",
    "pyright>=1.1.408",
    "starlette>=0.38.0",
]

# Minimal dependencies for kiss.core module only
core = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=14.2.0",
]

# Core + Anthropic Claude support
claude = [
    {include-group = "core"},
    "anthropic>=0.40.0",
]

# Core + OpenAI support
openai = [
    {include-group = "core"},
    "openai>=2.13.0",
]

# Core + Google Gemini support
gemini = [
    {include-group = "core"},
    "google-genai>=0.30.0",
]

# Dependencies for kiss.agents.sorcar (web tools)
sorcar = [
    "playwright>=1.40.0",
]

docker = [
    "docker>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/kiss/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "redundancy_check: marks tests for redundancy check",
]
# Disable timeout so tests run without time limit
timeout = 0
addopts = "--cov=src/kiss --cov-branch"

[tool.coverage.run]
branch = true
parallel = true
source = ["src/kiss"]
omit = ["src/kiss/tests/*"]
concurrency = ["greenlet", "thread"]
data_file = ".coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
partial_branches = [
    "pragma: no branch",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = false
exclude = ["src/kiss/agents/vscode/kiss_project/"]

[[tool.mypy.overrides]]
module = "backports.zstd.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.genai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "slack_sdk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kiss.tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "kiss.viz_trajectory.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "telegram.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lark_oapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "linebot.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mattermostdriver.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twitchio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twilio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynostr.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "irc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["harbor", "harbor.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["datasets", "datasets.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.uv.workspace]
members = [
    "kiss_ai",
]

[project.urls]
Homepage = "https://github.com/ksen/kiss"
Repository = "https://github.com/ksen/kiss"

[project.scripts]
check = "kiss.scripts.check:main"
generate-api-docs = "kiss.scripts.generate_api_docs:main"
sorcar = "kiss.agents.sorcar.stateful_sorcar_agent:main"
kiss-slack = "kiss.channels.slack_agent:main"
kiss-gmail = "kiss.channels.gmail_agent:main"
kiss-whatsapp = "kiss.channels.whatsapp_agent:main"
kiss-telegram = "kiss.channels.telegram_agent:main"
kiss-discord = "kiss.channels.discord_agent:main"
kiss-gchat = "kiss.channels.googlechat_agent:main"
kiss-signal = "kiss.channels.signal_agent:main"
kiss-msteams = "kiss.channels.msteams_agent:main"
kiss-matrix = "kiss.channels.matrix_agent:main"
kiss-feishu = "kiss.channels.feishu_agent:main"
kiss-line = "kiss.channels.line_agent:main"
kiss-mattermost = "kiss.channels.mattermost_agent:main"
kiss-irc = "kiss.channels.irc_agent:main"
kiss-bluebubbles = "kiss.channels.bluebubbles_agent:main"
kiss-imessage = "kiss.channels.imessage_agent:main"
kiss-nextcloud = "kiss.channels.nextcloud_talk_agent:main"
kiss-nostr = "kiss.channels.nostr_agent:main"
kiss-synology = "kiss.channels.synology_chat_agent:main"
kiss-tlon = "kiss.channels.tlon_agent:main"
kiss-twitch = "kiss.channels.twitch_agent:main"
kiss-zalo = "kiss.channels.zalo_agent:main"
kiss-phone = "kiss.channels.phone_control_agent:main"
kiss-sms = "kiss.channels.sms_agent:main"
